--- a/src/pages/zh/p/[id].astro
+++ b/src/pages/zh/p/[id].astro
@@ -73,7 +73,7 @@ const tt = (p: Post) => p.titleZh ?? p.title;
 
       <button
         type="button"
-        class="acg-cover-retry glass-card clickable"
+        class="acg-cover-retry acg-icon-fab clickable"
         data-cover-retry
         aria-label={retryCoverLabel}
         title={retryCoverLabel}
